--- a/SimpleProject/Resources/SharedResources.ar.resx
+++ b/SimpleProject/Resources/SharedResources.ar.resx
@@ -123,6 +123,9 @@
   <data name="Name" xml:space="preserve">
     <value>الاسم</value>
   </data>
+  <data name="NameIsRequired" xml:space="preserve">
+    <value>الاسم مطلوب</value>
+  </data>
   <data name="Price" xml:space="preserve">
     <value>السعر</value>
   </data>
