--- a/SimpleProject/Resources/SharedResources.en.resx
+++ b/SimpleProject/Resources/SharedResources.en.resx
@@ -123,8 +123,8 @@
   <data name="Name" xml:space="preserve">
     <value>Name</value>
   </data>
-  <data name="NameIsRequired" xml:space="preserve">
-    <value>Name Is Required</value>
+  <data name="NameArIsRequired" xml:space="preserve">
+    <value>Name Arabic Is Required</value>
   </data>
   <data name="Price" xml:space="preserve">
     <value>Price</value>
