--- a/SimpleProject/Resources/SharedResources.ar.resx
+++ b/SimpleProject/Resources/SharedResources.ar.resx
@@ -129,4 +129,7 @@
   <data name="Price" xml:space="preserve">
     <value>السعر</value>
   </data>
+  <data name="UsernameOrPasswordIsWrong" xml:space="preserve">
+    <value>اسم المستخدم او كلمة المرور خطأ</value>
+  </data>
 </root>
